# Spot-Smart

./: .env  .gitignore  .replit  README.md  app.json  package-lock.json  package.json  pyproject.toml  replit.md
admin-dashboard/: app.js  index.html  styles.css
attached_assets/: Pasted--eslint-disable-no-undef-import-Box-Button-ButtonGroup-Flex-HStack-Ic-1759842275249_1759842275250.txt  Pasted-Dataset-Parking-Space-Dataset-Structure-The-dataset-is-organized-into-the-following-structure--1759397655877_1759397655879.txt  Pasted-ERROR-database-mongodb-config-u274c-MongoDB-connection-failed-localhost-27017-WinError-10061-No-1758623062922_1758623062923.txt  Pasted-Exception-in-thread-Thread-1-serve-forever-Traceback-most-recent-call-last-File-C-Progra-1758626028837_1758626028838.txt  Pasted-Introduction-Did-you-know-that-the-average-American-commuter-spends-17-hours-per-year-looking-for-p-1759396101150_1759396101151.txt  Pasted-Project-Sheridan-Spot-Smart-8-Week-Agile-Build-Plan-Guiding-Principles-Agile-Delivery-Focus-1758010474521_1758010474522.txt  Pasted-import-Flex-Heading-Button-VStack-FormControl-Input-ButtonGroup-Box-1759842282456_1759842282457.txt  Pasted-import-Flex-Text-IconButton-useDisclosure-Drawer-DrawerOverlay-DrawerCo-1759842452852_1759842452853.txt  Pasted-import-React-from-react-import-Box-Flex-Heading-Text-Button-Image-u-1759842263530_1759842263531.txt
backend/: .env  .env.example  app.py  package-lock.json  package.json  requirements.txt  server.js
client/: .env  package-lock.json  package.json
src/: App.js  ParkingDetectionTest.js  (+1 more)
(+32 files in other folders)
